testing/framework/resources/Advanced/Failing/mondrian/query6080.q
select count(*) from agg_tenant;
